--- a/blog.html
+++ b/blog.html
@@ -1,5 +1,4 @@
 <!doctype html>
-<!doctype html>
 
 <html>
   
@@ -15,7 +14,7 @@
         <ul>
           <div class = tabb>
             <div id="link"></div>
-          <li class  = "tabs "><a href="blog.html" style="color: #EDF5E1;">Chatroom</a></li>
+          <li class  = "tabs "><a href="blog.html" style="color: #EDF5E1;">Blog</a></li>
           <li class = "tabs"><a href="resources.html" style="color: #EDF5E1;">Resources</a></li>
           <li class ="tabs"><a href="index.html" style="color: #EDF5E1;">Info</a></li>
           </div>
